--- a/spotify-App/package.json
+++ b/spotify-App/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.3.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.4.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
