--- a/spotify-App/package.json
+++ b/spotify-App/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^1.6.1",
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.5",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.2.5",
     "vuetify": "^3.4.9"
   },
